--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "app"
+name = "ng-ai-image-to-website"
 main = ".worker-next/index.mjs"
 
 compatibility_date = "2024-08-29"
