--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,3 +10,16 @@ minify = true
 
 # Use the new Workers + Assets to host the static frontend files
 assets = { directory = ".worker-next/assets", binding = "ASSETS" }
+
+[ai]
+binding = "AI"
+
+[vars]
+AI_GATEWAY_ID = "ai-image-to-website"
+
+[[r2_buckets]]
+binding = 'AI_IMAGE_BUCKET'
+bucket_name = 'ai-image-to-website-uploads'
+
+[observability]
+enabled = true
